更新2022-02-05 添加UI隐藏 视频录制

--- a/css/style.css
+++ b/css/style.css
@@ -428,6 +428,7 @@
     width: 36px;    border: 1px solid #dfd5d554;
     border-radius: 10px;    background: #ffffff14;
         }
+        .gba-ctrl.hideui .vk{display: none !important;}
         @media screen and (max-width:600px) {
             .gba-ctrl {
                 position: relative;
