--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,9 @@
             top: 15px;
             z-index: 10003;
         }
-
+        .gba-result img{
+            max-width: 100%;
+        }
         .gba-result {
             font-size: 12px;
         }
