--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,8 +542,8 @@ img{
 
 canvas {
     display: block;
-    max-width: max(100%, calc(100vh * 160 / 240));
-    max-height: min(100%, calc(100vw * 240 / 160));
+    max-width:100%;
+    max-height:100%;
     position: fixed;
     top: 0;
     left: 0;
