--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,11 @@ img{
     margin: 0px auto;
     max-width: 100vw;
 }
-.wel-btn button{
+.wel-index button{
     margin: 5px;
+    outline: none;
+    border: 1px solid #fff;
+    border-radius: 5px;
 }
 .wel-ul {
     padding: .5em;
@@ -43,7 +46,21 @@ img{
     font-size: 12px;
     padding-left: 2em;
 }
+.wel-start-ready{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: stretch;
+}
+.wel-start-ready button{
+    margin: 5px 10px;
+    width: 33%;
+    outline: none;
+    border: 1px solid #fff;
+    border-radius: 5px;
 
+}
 .wel-ul .db-key {
     display: inline-block;
     padding: 3px;
@@ -108,6 +125,12 @@ img{
 
 .wel-game-list li:nth-child(odd) {
     background-color: #5abd67;
+}
+.wel-game-list button{
+    margin: 5px;
+    outline: none;
+    border: 1px solid #fff;
+    border-radius: 5px;
 }
 
 .wel-core-mod button {
